Option for hash-property-name input

--- a/action.yml
+++ b/action.yml
@@ -11,3 +11,6 @@ inputs:
   issue-template:
     description: The YAML file for the GitHub issue form template
     required: true
+  hash-property-name:
+    description: The object property to use to generate the has for the file name.
+    required: true
