--- a/test/sample-issue-template.yml
+++ b/test/sample-issue-template.yml
@@ -7,7 +7,7 @@ body:
     id: url
     attributes:
       label: Site URL
-      description: The home page of the live web site you built
+      description: The home page of the live web site you built [parser:url]
       placeholder: e.g. https://www.zachleat.com/
     validations:
       required: true
@@ -26,7 +26,7 @@ body:
     id: source_url
     attributes:
       label: Source code URL
-      description: The URL for the source code for this site
+      description: The URL for the source code for this site [parser:url]
       placeholder: e.g. https://github.com/zachleat/zachleat.com
     validations:
       required: false
@@ -34,7 +34,7 @@ body:
     id: authors
     attributes:
       label: Authors (GitHub usernames)
-      description: Leave this empty if you are the only author. If this has a value, make sure to include yourself in the list (if applicable!)
+      description: Leave this empty if you are the only author. If this has a value, make sure to include yourself in the list (if applicable!) [parser:usernames]
       placeholder: e.g. @zachleat, @pdehaan
     validations:
       required: false
@@ -42,7 +42,7 @@ body:
     id: business_url
     attributes:
       label: Super Professional Business Network CTA URL
-      description: Open Collective Members can be featured on the [Eleventy Super Professional Business Network](https://www.11ty.dev/super-professional-business-network/)
+      description: Open Collective Members can be featured on the [Eleventy Super Professional Business Network](https://www.11ty.dev/super-professional-business-network/) [parser:url]
       placeholder: e.g. https://www.zachleat.com/
     validations:
       required: false
